--- a/gleam.toml
+++ b/gleam.toml
@@ -14,6 +14,14 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
+mist = ">= 1.0.0 and < 2.0.0"
+gleam_http = ">= 3.6.0 and < 4.0.0"
+gleam_otp = ">= 0.10.0 and < 1.0.0"
+gleam_pgo = ">= 0.7.0 and < 1.0.0"
+argv = ">= 1.0.2 and < 2.0.0"
+simplifile = ">= 1.7.0 and < 2.0.0"
+birl = ">= 1.6.1 and < 2.0.0"
+gleam_erlang = ">= 0.25.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
