--- a/gleam.toml
+++ b/gleam.toml
@@ -4,10 +4,12 @@ version = "1.0.0"
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
 #
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "username", repo = "project" }
-# links = [{ title = "Website", href = "https://gleam.run" }]
+description = "A simple API for managing evolving digital pets"
+licences = ["Apache-2.0"]
+repository = { type = "github", user = "sneakycrow", repo = "gleam-pet-api" }
+links = [
+    { title = "Website", href = "https://sneakycrow.dev/lib/gleam-pet-api" },
+]
 #
 # For a full reference of all the available options, you can have a look at
 # https://gleam.run/writing-gleam/gleam-toml/.
