--- a/gleam.toml
+++ b/gleam.toml
@@ -24,6 +24,7 @@ argv = ">= 1.0.2 and < 2.0.0"
 simplifile = ">= 1.7.0 and < 2.0.0"
 birl = ">= 1.6.1 and < 2.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
+envoy = ">= 1.0.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
