--- a/gleam.toml
+++ b/gleam.toml
@@ -25,6 +25,8 @@ simplifile = ">= 1.7.0 and < 2.0.0"
 birl = ">= 1.6.1 and < 2.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
 envoy = ">= 1.0.1 and < 2.0.0"
+lustre = ">= 4.2.2 and < 5.0.0"
+wisp = ">= 0.14.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
